feat: 增强学科和分类管理，重构相关服务和DTO，支持多对多关系，优化任务统计逻辑